Fixed overflow on hero

--- a/home-page/src/App.css
+++ b/home-page/src/App.css
@@ -140,7 +140,7 @@ footer {
     position: absolute;
     top: 3em;
     padding-left: 35vw;
-    max-width: 60vw;
+    max-width: 50vw;
   }
   .app-section {
     top: 2em;
